pino_utils_derive/tests/06-invalid_mode.rs

use pino_utils_derive::enum_string;

#[enum_string(invalid)]
enum Weapon {
    Gun,
    Sword,
    Knife,
}

fn main() {}
